--- a/styles.css
+++ b/styles.css
@@ -19,3 +19,14 @@ button {
   display: block;
   font: inherit;
 }
+button:hover {
+  background-color: rgb(52, 14, 95);
+  border-color: rgb(52, 14, 95);
+}
+.form-control-inline {
+  display: flex;
+}
+.form-control-inline input {
+  width: auto;
+  margin-right: 1rem;
+}
